--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Sitaaron ke Aage, Jahaan Aur Bhi Hain.</h1>
     <h1>Abhi Ishq ke Imtihaan Aur Bhi Hain.</h1>
+    <h1>Abhi Hum Zinda Hain</h1>
 </body>
 </html>
