--- a/404.html
+++ b/404.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Error</title>
-    <link rel="stylesheet" href="/styles404.css">
+    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles404.css">
 </head>
-<body background="#2f2f2f">
+<body>
     <h1 class="errorcode">Error 404</h1>
     <img src="https://media.giphy.com/media/gHPn1MdH7PVH3uBUqY/giphy.gif" alt="lost" class="image">
-    <h1 class="not">Not Found!</h1>
+    <h1 class="errorcode">Not Found!</h1>
 </body>
 </html>
