--- a/404.html
+++ b/404.html
@@ -11,5 +11,6 @@
     <h1 class="errorcode">Error 404</h1>
     <img src="https://media.giphy.com/media/gHPn1MdH7PVH3uBUqY/giphy.gif" alt="lost" class="image">
     <h1 class="errorcode">Not Found!</h1>
+    <h3>Let's Go <span><a href="https://quizzrapi.herokuapp.com/">Back</a></span></h3>
 </body>
 </html>
