--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/style.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Mali:ital,wght@1,500;1,600&family=Questrial&family=Raleway&display=swap" rel="stylesheet">
+    <title>Home of the QuizzR-API</title>
 </head>
-<body background="#faaa22">
-    <h1>Waah Modiji Waah!</h1>
-    <img src="https://media.giphy.com/media/m82Z6oaf0TF1S/giphy.gif" alt="NBA" width="200px">
+<body>
+    <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark">
+        <a href="" class="navbar-brand">
+            <p class="brand-name">QuizzR</p>
+        </a>
+        <button class="navbar-toggler btn btn-sm ml-right-auto" type="button" data-toggle="collapse"
+            data-target="#naviga" aria-controls="naviga" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="naviga">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="#bio">Bio</a></li>
+                <li class="nav-item"><a class="nav-link" href="#blog">Blogs</a></li>
+                <li class="nav-item"><a class="nav-link" href="#project">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+      <div class="head">
+          <div class="rheto">Ever wanted to Build a Quiz Game but gave up at the prospect of Hunting for the Right Questions and set them up?</div>
+          <div class="ans">Well, look no further, the QuizzR API has got your back!</div>
+          <p class="kya">QuizzR is a RESTful API to return General Knowledge questions at Random or by Difficulty.</p>
+      </div>
+
+
 </body>
 </html>
