--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Mali:ital,wght@1,500;1,600&family=Questrial&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Arvo&family=Mali:ital,wght@1,500;1,600&family=Nunito&family=Questrial&family=Raleway&display=swap" rel="stylesheet">
     <title>Home of the QuizzR-API</title>
 </head>
 <body>
@@ -33,9 +33,26 @@
       <div class="head">
           <div class="rheto">Ever wanted to Build a Quiz Game but gave up at the prospect of Hunting for the Right Questions and set them up?</div>
           <div class="ans">Well, look no further, the QuizzR API has got your back!</div>
-          <p class="kya">QuizzR is a RESTful API to return General Knowledge questions at Random or by Difficulty.</p>
+          <p class="kya">QuizzR is an Open-Source RESTful API to return General Knowledge questions at Random or by Difficulty.</p>
       </div>
-
+      <div class="use">
+          <h2 class="use-title">How to Use: </h2>
+          <div class="random">
+            <h3 class="random-title">Get a Random Question</h3>
+            <p class="hitup">Hit Up the URL: <br></p>
+            <div class="random-url">https://quizzrapi.herokuapp.com/random</div>
+            <p class="what">You get a JSON file to import similar to this:</p>
+            <img src="images/random.png" alt="random question" class="img-fluid randomcode">
+          </div>
+          <div class="diffi">
+            <h3 class="random-title">Get a Question of Custom Difficulty</h3>
+            <p class="hitup">Hit Up the URL: <br></p>
+            <div class="random-url">https://quizzrapi.herokuapp.com/difficulty/3</div>
+            <p class="diff-level">(Difficulty Ranges from 1 to 5.)</p>
+            <p class="what">You get a JSON file to import similar to this:</p>
+            <img src="images/custom.png" alt="random output" class="img-fluid randomcode">
+          </div>
+      </div>
 
 </body>
 </html>
