--- a/index.html
+++ b/index.html
@@ -115,7 +115,28 @@
             </div>
         </div>
     </div>
-
+    <div class="contact">
+        <h2 class="contactus">Let's Connect</h2>
+        <h3 class="cont">Reach the Head Collaborators</h3>
+        <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-xs-12 column">
+                <div class="name">Fahad Shah</div>
+                <h5 class="ghhh"><a href="https://github.com/alfhad" style="color: #fdfdfd;">GitHub</a> | <a href="https://www.instagram.com/sayed.fahad/" style="color: #fdfdfd;">Instagram</a></h5>
+                <p class="college">Dr. DY Patil Institute of Technology, Pune.</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 column">
+                <div class="name">Devang Kamble</div>
+                <h5 class="ghhh"><a href="https://github.com/rising-entropy" style="color: #fdfdfd;">GitHub</a> | <a href="https://www.instagram.com/devangkamble/" style="color: #fdfdfd;">Instagram</a></h5>
+                <p class="college">Walchand College of Engineering, Sangli</p>
+            </div>
+            <div class="col-lg-4 col-sm-12 column">
+                <div class="name">Sourav Singh</div>
+                <h5 class="ghhh"><a href="https://github.com/sourav2712" style="color: #fdfdfd;">GitHub</a> | <a href="https://www.instagram.com/singh_sourav2712/" style="color: #fdfdfd;">Instagram</a></h5>
+                <p class="college">Dr. DY Patil Institute of Technology, Pune.</p>
+            </div>
+        </div></div>
+    </div>
 </body>
 
 </html>
