--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </button>
         <div class="collapse navbar-collapse" id="naviga">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="#bio">Bio</a></li>
-                <li class="nav-item"><a class="nav-link" href="#blog">Blogs</a></li>
-                <li class="nav-item"><a class="nav-link" href="#project">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#use">How to Use</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contribute">Contribute</a></li>
+                <li class="nav-item"><a class="nav-link" href="#connect">Connect</a></li>
                 </li>
         </div>
     </nav>
@@ -67,7 +67,7 @@
         <p class="kya">QuizzR is an Open-Source RESTful API to return General Knowledge questions at Random or by
             Difficulty.</p>
     </div>
-    <div class="use">
+    <div class="use" id="use">
         <h2 class="use-title">How to Use: </h2>
         <div class="random">
             <h3 class="random-title">Get a Random Question</h3>
@@ -87,7 +87,7 @@
             <img src="images/custom.png" alt="random output" class="img-fluid randomcode">
         </div>
     </div>
-    <div class="contribute">
+    <div class="contribute" id="contribute">
         <h2 class="use-title">Contribute</h2>
         <div class="gh">The Entire Code Base Can Be Found on <a href="https://github.com/alfhad/QuizzR-API"
                 style="font-size: 1.39rem;">GitHub</a>.</div>
@@ -111,11 +111,15 @@
                         the same. <br>
                         Hence, keep the difficulty to what you expect for an average person.
                     </li>
+                    <li>
+                        Inevitably, there may be some errors crept in the questions.<br>
+                        If you find any, please do the necessary changes and contribute.
+                    </li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="contact">
+    <div class="contact" id="connect">
         <h2 class="contactus">Let's Connect</h2>
         <h3 class="cont">Reach the Head Collaborators</h3>
         <div class="container">
@@ -137,6 +141,9 @@
             </div>
         </div></div>
     </div>
+    <footer>
+        In Collaboration, we Trust.
+    </footer>
 </body>
 
 </html>
