--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         href="https://fonts.googleapis.com/css2?family=Alegreya&family=Arvo&family=Mali:ital,wght@1,500;1,600&family=Nunito&family=Questrial&family=Raleway&display=swap"
         rel="stylesheet">
     <title>Home of the QuizzR-API</title>
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <style>
         a {
             text-align: center;
