--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         rel="stylesheet">
     <title>Home of the QuizzR-API</title>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
     <style>
         a {
             text-align: center;
