--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <p class="what">You get a JSON file to import similar to this:</p>
             <img src="images/custom.png" alt="random output" class="img-fluid randomcode">
         </div>
+        <div class="tip">While, we can't guarantee the uniqueness of questions for each Request, we provide a distinct ID for each question which you can use to ensure a unique set.</div>
     </div>
     <div class="contribute" id="contribute">
         <h2 class="use-title">Contribute</h2>
