--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
                 <h5 class="ghhh"><a href="https://github.com/alfhad" style="color: #fdfdfd;">GitHub</a> | <a href="https://www.instagram.com/sayed.fahad/" style="color: #fdfdfd;">Instagram</a></h5>
                 <p class="college">Dr. DY Patil Institute of Technology, Pune.</p>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 column">
+            <div class="col-lg-4 col-xs-12 column">
                 <div class="name">Devang Kamble</div>
                 <h5 class="ghhh"><a href="https://github.com/rising-entropy" style="color: #fdfdfd;">GitHub</a> | <a href="https://www.instagram.com/devangkamble/" style="color: #fdfdfd;">Instagram</a></h5>
                 <p class="college">Walchand College of Engineering, Sangli</p>
             </div>
-            <div class="col-lg-4 col-sm-12 column">
+            <div class="col-lg-4 col-xs-12 column">
                 <div class="name">Sourav Singh</div>
                 <h5 class="ghhh"><a href="https://github.com/sourav2712" style="color: #fdfdfd;">GitHub</a> | <a href="https://www.instagram.com/singh_sourav2712/" style="color: #fdfdfd;">Instagram</a></h5>
                 <p class="college">Dr. DY Patil Institute of Technology, Pune.</p>
