--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#use">How to Use</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contribute">Contribute</a></li>
+                <li class="nav-item"><a class="nav-link" href="#wof">Wall of Fame</a></li>
                 <li class="nav-item"><a class="nav-link" href="#connect">Connect</a></li>
                 </li>
         </div>
@@ -121,6 +122,23 @@
                 </ul>
             </div>
         </div>
+    </div>
+    <div class="wall-of-fame" id="wof">
+        <h2 class="use-title">Wall of Fame</h2>
+        <div class="wof-mean">Welcome to the Wall of Fame, where we feature the Projects made using the QuizzR API.</div>
+        <div class="container">
+            <div class="col-lg-4 col-xs-12">
+                <div class="column2">
+                    <h5 class="wof-name">Infinite Quizz Game in JS</h5>
+                    <div class="src">Source: <a href="https://svelte.dev/repl/e488c9f35a224b72ad0d21e850d2698c?version=3.24.0">Here</a></div>
+                    <div class="imp">App: <a href="https://happyduckiesdemos.netlify.app/svelte-quiz/">Here</a></div>
+                    <div class="maker">Maker: <a href="https://www.reddit.com/user/freddietheteacher/">u/freddietheteacher</a></div>
+                </div>
+            </div>
+
+        </div>
+        <h2 class="make">Made a Project using QuizzR?</h2>
+        <h4 class="hit-me">Hit Us Up To Get Featured!</h4>
     </div>
     <div class="contact" id="connect">
         <h2 class="contactus">Let's Connect</h2>
